fixed jumping content and change background

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,6 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #1f1f1f;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
