--- a/src/section/IntroductionSection/IntroductionSection.css
+++ b/src/section/IntroductionSection/IntroductionSection.css
@@ -7,6 +7,9 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    overflow: hidden;
+    background: linear-gradient(315deg, rgba(31,31,31,1) 0%, rgba(47,47,47,1) 80%);
+    z-index: -2;
 }
 
 #IntroSection h1 {
@@ -87,12 +90,7 @@
     height: 100%;
     overflow: hidden;
 }
-#CometContainer{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-}
+
 
 @media (max-width: 1100px) {
     #IntroSection h1{
